feat(argocd-examples): update GitOps examples for OCI provider deployment
- Switch to public ghcr.io/oracle-samples provider images
- Flatten directory structure (remove oci-sub-packages layer)
- Add multiple auth methods: API Key, Instance Principal, Security Token
- Fix ArgoCD cleanup to handle auto-sync correctly
- Update runtime config with debug disabled by default
- Sync with latest crossplane-gitops configurations

--- a/argocd-examples/argocd/config/argocd-crossplane-config.yaml
+++ b/argocd-examples/argocd/config/argocd-crossplane-config.yaml
@@ -129,7 +129,15 @@ data:
     jsonPointers:
       - /metadata
       - /subsets
-  
+
+  # Ignore differences for Crossplane Compositions
+  resource.customizations.ignoreDifferences.apiextensions.crossplane.io_Composition: |
+    jqPathExpressions:
+    - .spec.mode
+    - .spec.publishConnectionDetailsWithStoreConfigRef
+    - .spec.resources[].readinessChecks
+    - '.spec.resources[]?.patches[]?.transforms[]?.string.type'
+
   resource.customizations.ignoreResourceUpdates.all: |
     jsonPointers:
       - /status
