--- a/argocd-examples/crossplane/providers/family/provider.yaml
+++ b/argocd-examples/crossplane/providers/family/provider.yaml
@@ -5,9 +5,9 @@ metadata:
   annotations:
     argocd.argoproj.io/sync-wave: "1"
 spec:
-  package: iad.ocir.io/iddevjmhjw0n/provider-family-oci:v0.0.13-test
+  package: ghcr.io/oracle-samples/provider-family-oci:v0.0.1-alpha.1-amd64
   packagePullPolicy: IfNotPresent
   revisionActivationPolicy: Automatic
   revisionHistoryLimit: 1
   runtimeConfigRef:
-    name: oci-sub-packages-runtime-config
+    name: oci-providers-runtime-config
