fix(argocd-examples): update targetRevision to main in application manifests

--- a/argocd-examples/argocd/applications/oke-claims.yaml
+++ b/argocd-examples/argocd/applications/oke-claims.yaml
@@ -11,7 +11,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/oracle-samples/crossplane-provider-oci
-    targetRevision: sub-package-provider
+    targetRevision: main
     path: argocd-examples/oke-claims
   destination:
     server: https://kubernetes.default.svc
